--- a/package.xml
+++ b/package.xml
@@ -12,7 +12,7 @@
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>message_generation</build_depend>
-  <depend>message_runtime</depend>
+
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
@@ -35,4 +35,5 @@
   <exec_depend>std_srvs</exec_depend>
   <exec_depend>diagnostic_msgs</exec_depend>
   <exec_depend>diagnostic_updater</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 </package>
