--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 -i https://pypi.org/simple
 aenum==3.1.5
-gpiod==1.5.0
+gpiod==1.5.3
 minimalmodbus==2.0.1
+msgpack==1.0.4 ; platform_system != 'Windows'
+packaging==22.0 ; python_version >= '3.7'
 pyserial==3.5
-python-can==3.3.4
-wrapt==1.13.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+python-can==4.1.0
+setuptools==65.6.3 ; python_version >= '3.7'
+typing-extensions==4.4.0 ; python_version >= '3.7'
+wrapt==1.14.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
